# psdm

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  codecov.yaml  justfile
.github/workflows/: release-please.yaml  release.yaml  rust-ci.yaml
benchmark/: plot.py  psdm.bench.json  snpdists.bench.json
src/: lib.rs  main.rs
tests/: main.rs
tests/cases/: aln1.fa
