[package]
name = "psdm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
anyhow = "1"
niffler = "2.3"
noodles-fasta = "0.3"
itertools = "0.10"
rayon = "1.5"
ndarray = "0.15"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3.2"