[package]
name = "psdm"
version = "0.1.0"
edition = "2018"
authors = ["Michael Hall <michael@mbh.sh>"]
repository = "https://github.com/mbhall88/psdm"
homepage = "https://github.com/mbhall88/psdm"
readme = "README.md"
keywords = ["bioinformatics", "SNP", "matrix", "fasta", "pairwise"]
categories = ["science", "command-line-utilities"]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[badges]
maintenance = { status = "actively-developed" }

[dependencies]
structopt = "0.3"
anyhow = "1"
niffler = "2.3"
noodles-fasta = "0.3"
itertools = "0.10"
rayon = "1.5"
indicatif = {version = "0.16", features = ["rayon"]}
ndarray = "0.15"
log = "0.4"
env_logger = "0.9"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3.2"