[package]
name = "psdm"
description = "Compute a pairwise SNP distance matrix from one or two alignment(s)"
version = "0.3.0"
edition = "2018"
authors = ["Michael Hall <michael@mbh.sh>"]
repository = "https://github.com/mbhall88/psdm"
homepage = "https://github.com/mbhall88/psdm"
readme = "README.md"
keywords = ["bioinformatics", "SNP", "matrix", "fasta", "pairwise"]
categories = ["science", "command-line-utilities"]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[badges]
maintenance = { status = "actively-developed" }

[dependencies]
clap = { version = "3.1", features = ["derive"] }
anyhow = "1"
niffler = "2.3"
noodles-fasta = "0.40"
itertools = "0.13"
rayon = "1.10"
ndarray = "0.15"
log = "0.4"
env_logger = "0.11.3"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3.2"
